--- a/src/main/resources/templates/exampaper.html
+++ b/src/main/resources/templates/exampaper.html
@@ -277,10 +277,10 @@
                     return response.json();
                 })
                 .then(data => {
-                    console.log('Remaining Time Data:', data); // Debugging: Log the fetched remaining time data
+                    console.log('Remaining Time Data:', data); 
                     const remainingSeconds = data.remainingSeconds;
-                    endTime = Date.now() + remainingSeconds * 1000; // Calculate the end time
-                    startTimer(remainingSeconds); // Start the timer with the fetched remaining time
+                    endTime = Date.now() + remainingSeconds * 1000; 
+                    startTimer(remainingSeconds); 
                 })
                 .catch(error => {
                     console.error('Error fetching remaining time:', error);
@@ -291,15 +291,15 @@
             function updateTimer() {
                 const now = Date.now();
                 const remainingSeconds = Math.max(Math.floor((endTime - now) / 1000), 0);
-                console.log('Remaining seconds:', remainingSeconds); // Debugging: Log remaining seconds
+                console.log('Remaining seconds:', remainingSeconds); 
 
                 if (remainingSeconds <= 0) {
-                    clearInterval(interval); // Stop updating the timer if time is up
+                    clearInterval(interval); 
                     timerElement.textContent = '00:00:00';
-                    displaySavedAnswers(); // Trigger end exam button
-                    localStorage.removeItem(`timer_${examId}`); // Remove the timer data from localStorage
-                    console.log('Timer stopped.'); // Debugging: Log timer stopped
-                    return; // Exit the function to prevent further execution
+                    displaySavedAnswers(); 
+                    localStorage.removeItem(`timer_${examId}`); 
+                    console.log('Timer stopped.'); 
+                    return; 
                 }
 
                 const hours = Math.floor((remainingSeconds % 86400) / 3600);
@@ -307,10 +307,9 @@
                 const seconds = remainingSeconds % 60;
 
                 timerElement.textContent = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-                localStorage.setItem(`timer_${examId}`, remainingSeconds); // Store remaining time in localStorage
+                localStorage.setItem(`timer_${examId}`, remainingSeconds); 
             }
 
-            // Update the timer initially and then every second
             updateTimer();
             interval = setInterval(updateTimer, 1000);
         }
