--- a/src/main/resources/templates/handleExam.html
+++ b/src/main/resources/templates/handleExam.html
@@ -167,10 +167,10 @@
                     return response.json();
                 })
                 .then(data => {
-                    console.log('Remaining Time Data:', data); // Debugging: Log the fetched remaining time data
+                    console.log('Remaining Time Data:', data); 
                     const remainingSeconds = data.remainingSeconds;
-                    endTime = Date.now() + remainingSeconds * 1000; // Calculate the end time
-                    startTimer(remainingSeconds); // Start the timer with the fetched remaining time
+                    endTime = Date.now() + remainingSeconds * 1000; 
+                    startTimer(remainingSeconds); 
                 })
                 .catch(error => {
                     console.error('Error fetching remaining time:', error);
@@ -181,15 +181,15 @@
             function updateTimer() {
                 const now = Date.now();
                 const remainingSeconds = Math.max(Math.floor((endTime - now) / 1000), 0);
-                console.log('Remaining seconds:', remainingSeconds); // Debugging: Log remaining seconds
+                console.log('Remaining seconds:', remainingSeconds); 
 
                 if (remainingSeconds <= 0) {
-                    clearInterval(interval); // Stop updating the timer if time is up
+                    clearInterval(interval); 
                     timerElement.textContent = '00:00:00';
-                    endExamButton.click(); // Trigger end exam button
-                    localStorage.removeItem(`timer_${examId}`); // Remove the timer data from localStorage
-                    console.log('Timer stopped.'); // Debugging: Log timer stopped
-                    return; // Exit the function to prevent further execution
+                    endExamButton.click(); 
+                    localStorage.removeItem(`timer_${examId}`); 
+                    console.log('Timer stopped.'); 
+                    return; 
                 }
 
                 const hours = Math.floor((remainingSeconds % 86400) / 3600);
@@ -197,38 +197,34 @@
                 const seconds = remainingSeconds % 60;
 
                 timerElement.textContent = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-                localStorage.setItem(`timer_${examId}`, remainingSeconds); // Store remaining time in localStorage
+                localStorage.setItem(`timer_${examId}`, remainingSeconds); 
             }
 
-            // Update the timer initially and then every second
             updateTimer();
             interval = setInterval(updateTimer, 1000);
         }
 
-        // Fetch the remaining time data from the backend and start the timer
         fetchRemainingTime();
 
         $('#endExamButton').click(function() {
             console.log('End exam button clicked.');
-            clearInterval(interval); // Stop the timer
+            clearInterval(interval); 
             timerElement.textContent = '00:00:00';
-            localStorage.removeItem(`timer_${examId}`); // Remove the timer data from localStorage
-            endExam(examId); // Call end exam function
+            localStorage.removeItem(`timer_${examId}`); 
+            endExam(examId); 
             
             const event = new Event('teacherExamEnded');
     		document.dispatchEvent(event);
         });
 
         function endExam(examId) {
-            // Check if the exam has already ended
+            // Check the exam ended
             fetch(`/hasExamEnded?examId=${examId}`)
                 .then(response => response.json())
                 .then(data => {
                     if (data.result) {
-                        // If the exam has already ended, do not proceed with ending the exam
                         alert('The exam has already ended.');
                     } else {
-                        // Proceed with ending the exam
                         $.ajax({
                             url: '/end-exam/' + examId,
                             method: 'POST',
@@ -237,7 +233,7 @@
                             success: function(response) {
                                 console.log('AJAX success');
                                 alert('Exam ended successfully!');
-                                // Update the exam status
+                                
                                 checkExamStatus();
                             },
                             error: function(xhr, status, error) {
@@ -276,7 +272,7 @@
 	            })
 	            .then(data => {
 	                console.log('Students Data:', data); 
-	                tableBody.innerHTML = ''; // clear existing rows
+	                tableBody.innerHTML = ''; 
 	                
 	                let completedCount = 0;
                     let totalCount = data.length;
